<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity_Welcomepage">

    <!--Welcoming text-->
    <TextView android:id="@+id/welcomingtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_vertical_margin"
        android:layout_marginTop="@dimen/text_vertical_margin"
        android:layout_gravity="center"
        android:text="@string/welcoming_text"/>

    <!-- Email Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center">
        <EditText android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/userhint" />
    </android.support.design.widget.TextInputLayout>

    <!-- Password Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center">
        <EditText android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/passwordhint"/>
    </android.support.design.widget.TextInputLayout>
    <!--Log in button-->
    <Button android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/welcome_horizontal_margin"
        android:layout_marginRight="@dimen/welcome_horizontal_margin"
        android:text="@string/loginbutton_text"
        android:onClick="login" />

    <!--Sign up button-->
    <Button android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/welcome_horizontal_margin"
        android:layout_marginRight="@dimen/welcome_horizontal_margin"
        android:text="@string/signupbutton_text"
        android:onClick="signup"/>

</LinearLayout>
